fixed color switch and attempted to fix vh issue on mobile

--- a/public/main.css
+++ b/public/main.css
@@ -45,6 +45,9 @@ body {
 
 .main {
     height: 100vh;
+    height: -moz-available;
+    height: -webkit-fill-available;
+    height: fill-available;
     background-color: #8b898e;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 80' width='80' height='80'%3E%3Cpath fill='%23b8dbd1' fill-opacity='0.19' d='M14 16H9v-2h5V9.87a4 4 0 1 1 2 0V14h5v2h-5v15.95A10 10 0 0 0 23.66 27l-3.46-2 8.2-2.2-2.9 5a12 12 0 0 1-21 0l-2.89-5 8.2 2.2-3.47 2A10 10 0 0 0 14 31.95V16zm40 40h-5v-2h5v-4.13a4 4 0 1 1 2 0V54h5v2h-5v15.95A10 10 0 0 0 63.66 67l-3.47-2 8.2-2.2-2.88 5a12 12 0 0 1-21.02 0l-2.88-5 8.2 2.2-3.47 2A10 10 0 0 0 54 71.95V56zm-39 6a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm40-40a2 2 0 1 1 0-4 2 2 0 0 1 0 4zM15 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm40 40a2 2 0 1 0 0-4 2 2 0 0 0 0 4z'%3E%3C/path%3E%3C/svg%3E");
     display: flex;
@@ -185,6 +188,7 @@ body {
     position: absolute;
     right: 0;
     bottom: -58px;
+    z-index: 10;
 }
 
 .input-group {
@@ -269,6 +273,7 @@ input:checked + .slider:before {
     justify-content: center;
     align-items: center;
     position: relative;
+    z-index: 0;
 }
 
 .bottom-btn {
